# SKMediaFoundation

./: .gitignore  CMakeLists.txt  README.md  build.ps1  run.ps1
Assets/: nv12_quad.hlsl  nv12_quad.hlsl.sks
src/: error.h  main.cpp  mf_decode_to_buffer.cpp  mf_decode_to_buffer.h  mf_decoder.cpp  mf_decoder.h  mf_encoder.cpp  mf_encoder.h  mf_examples.h  mf_mp4_source_reader.cpp  mf_mp4_source_reader.h  mf_utility.h  mf_video_decoder.cpp  mf_video_decoder.h  mf_video_encoder.cpp  mf_video_encoder.h  nak_memory.cpp  nak_memory.h  nv12_sprite.cpp  nv12_sprite.h  nv12_tex.cpp  nv12_tex.h
src/examples/: mf_decode_from_url.cpp  mf_roundtrip_mediacapture.cpp  mf_roundtrip_webcam.cpp
